fix(css): use 90% for code on mobile

--- a/assets/css/code.css
+++ b/assets/css/code.css
@@ -50,7 +50,7 @@ pre code {
 
 @media screen and (max-width: 760px) {
   pre code {
-    font-size: 80%;
+    font-size: 90%;
   }
 }
 
